--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-iframe": "^1.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-focus-scroll": "^0.0.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "~1.13.0",
