--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build": "next build"
   },
   "dependencies": {
     "@expo/match-media": "^0.0.0-beta.2",
@@ -14,6 +15,8 @@
     "@react-navigation/stack": "^5.14.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "file-loader": "^6.2.0",
+    "next": "^10.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-iframe": "^1.8.0",
@@ -30,7 +33,8 @@
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@expo/next-adapter": "^2.1.17"
   },
   "private": true
 }
