--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-web": "~0.13.12",
     "react-native-web-hooks": "^3.0.1",
     "react-responsive": "^8.2.0",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "vercel": "^21.2.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
