--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-focus-scroll": "^0.0.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-media-queries": "^0.3.0",
+    "react-native-media-query": "^1.0.3",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
