--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.9",
     "@expo/match-media": "^0.0.0-beta.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
@@ -17,7 +18,7 @@
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "file-loader": "^6.2.0",
-    "graphql": "^15.5.0",
+    "graphql": "^15.5.1",
     "graphql-tag": "^2.11.0",
     "next": "^10.0.5",
     "react": "16.13.1",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-super-grid": "^4.1.3",
     "react-native-web": "~0.13.12",
     "react-native-web-hooks": "^3.0.1",
     "react-responsive": "^8.2.0",
