--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
     "axios": "^0.21.1",
+    "date-and-time": "^2.0.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "file-loader": "^6.2.0",
@@ -27,6 +28,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-focus-scroll": "^0.0.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-media-queries": "^0.3.0",
     "react-native-media-query": "^1.0.3",
     "react-native-popover-view": "^3.1.1",
