Latest build with blogs

--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
     "axios": "^0.21.1",
+    "crypto-js": "^4.1.1",
     "date-and-time": "^2.0.0",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.1.2",
+    "expo-checkbox": "^1.0.3",
+    "expo-font": "^9.2.1",
+    "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.3",
     "file-loader": "^6.2.0",
     "graphql": "^15.5.1",
@@ -31,6 +36,7 @@
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-media-queries": "^0.3.0",
     "react-native-media-query": "^1.0.3",
+    "react-native-paper": "^4.9.2",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
